--- a/scss/themes/_midnight-blue.scss
+++ b/scss/themes/_midnight-blue.scss
@@ -1,6 +1,6 @@
 // Theme Colors
 $color-base: #000;
-$color-highlight: #1793D1;
+$color-highlight: #1793d1;
 
 $color-shade-darkest: #000;
 $color-shade-dark: #111;
@@ -9,7 +9,7 @@ $color-shade-light: #333;
 $color-shade-lightest: #444;
 
 // Font Colors
-$base-font-color: #00B9F2;
+$base-font-color: #00b9f2;
 
-$base-link-color: #1793D1;
-$base-link-color-active: #299BD4;
+$base-link-color: #1793d1;
+$base-link-color-active: #299bd4;
