Added styles for image viewer meta information (fixes #37)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,7 +53,7 @@
   @import "modules/modals/base";
   @import "modules/modals/channels";
   @import "modules/modals/direct-messages";
-  @import "modules/modals/lightbox";
+  @import "modules/modals/file";
   @import "modules/modals/profile";
   @import "modules/modals/preferences";
   @import "modules/modals/invite";
