Added styles for quick search

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,6 +59,7 @@
   @import "modules/modals/invite";
   @import "modules/modals/omnibox";
   @import "modules/modals/share";
+  @import "modules/modals/quick-search";
 
   @import "modules/tooltips/base";
   @import "modules/tooltips/coachmarks";
