Added styles for oauth pages

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -69,6 +69,7 @@
   @import "modules/hacks";
 
   @import "pages/apps";
+  @import "pages/oauth";
   @import "pages/spaces";
   @import "pages/website";
   @import "pages/status";
