Use white Slack logo on team pages

--- a/scss/pages/_website.scss
+++ b/scss/pages/_website.scss
@@ -2,6 +2,10 @@
 
 nav.top.persistent {
   background: $color-shade-dark;
+
+  .logo {
+    background-position: 50% 0 !important;
+  }
 }
 
 .widescreen {
