Added styles for pricing page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -70,6 +70,7 @@
 
   @import "pages/apps";
   @import "pages/oauth";
+  @import "pages/pricing";
   @import "pages/spaces";
   @import "pages/website";
   @import "pages/status";
