Updated apps directory styles

--- a/scss/pages/_apps.scss
+++ b/scss/pages/_apps.scss
@@ -101,8 +101,12 @@
   }
 }
 
-.large_app_icon {
-  border: 1px solid $color-shade-dark;
+.apps_directory {
+  .app_card,
+  .large_app_card {
+    background-color: $color-base;
+    border: 1px solid $color-shade-dark;
+  }
 }
 
 nav.top.apps_nav {
