--- a/scss/modules/messaging/_code.scss
+++ b/scss/modules/messaging/_code.scss
@@ -1,7 +1,7 @@
 code {
   background-color: $color-shade-darkest;
   border: 1px solid $color-shade-dark;
-  color: $color-highlight;
+  color: $base-font-color;
 }
 
 .file_list_item.snippet .snippet_preview {
