Added styles for Slack API documentation

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,6 +68,7 @@
   @import "modules/color-overrides";
   @import "modules/hacks";
 
+  @import "pages/api";
   @import "pages/apps";
   @import "pages/oauth";
   @import "pages/pricing";
